chore(codebase): refactor codebase - refactor client side (Jsdoc) - refactor server side response status codes - refactor test suites to reflect changes [Finishes #154357775]
